--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -16,7 +16,7 @@
 	font-weight: 700;
 }
 
-$font__primary: 'Avenir', sans-serif;
-
-$font__secondary: 'Roboto Slab', sans-serif;
+$font__primary: 'Roboto', sans-serif;
+$font__vireo: 'Avenir', sans-serif;
+$font__secondary: 'Inconsolata', sans-serif;
 $font__size: 1.2em;
