--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -3,26 +3,53 @@
   background-size: cover;
   height: 100vh;
 
+  .list-title {
+    font-family: $font__secondary;
+    font-weight: 400;
+    margin-bottom: 1em;
+    color: darken($white, 20%);
+  }
+
+  .bookkeeping {
+    border-bottom: 2px solid $deep-purple;
+    a {
+      &:hover {
+        color: $deep-purple;
+      }
+    }
+  }
+
+  .project-management {
+    border-bottom: 2px solid $teal;
+    a {
+      &:hover {
+        color: $teal;
+      }
+    }
+  }
+
+  .social-media {
+    border-bottom: 2px solid $yellow;
+    a {
+      &:hover {
+        color: $yellow;
+      }
+    }
+  }
+
+  .tools {
+    border-bottom: 2px solid $vireo;
+    a {
+      &:hover {
+        color: $vireo;
+      }
+    }
+  }
+
   ul {
     list-style-type: none;
     z-index: 20;
     position: relative;
-
-    &:first-child {
-      border-bottom: 2px solid $green;
-    }
-
-    &:nth-child(2) {
-      border-bottom: 2px solid $deep-orange;
-    }
-
-    &:nth-child(3) {
-      border-bottom: 2px solid $yellow;
-    }
-
-    &:nth-child(4) {
-      border-bottom: 2px solid $purple;
-    }
 
     .fa {
       margin-right: 10px;
@@ -38,20 +65,11 @@
     @include rowMachine(4,5%);
     padding: 2%;
     float: left;
-    background: rgba($black ,0.9);
-    transition: 0.6s ease;
-
+    background: rgba($black ,0.7);
+    transition: 0.4s ease;
 
     &:hover {
       background: rgba($black ,1);
-      box-shadow: 2px 2px 10px rgba(0,0,0,0.8),
-      -2px -2px 10px rgba(0,0,0,0.8);
     }
-  }
-
-  .list-title {
-    font-family: $font__secondary;
-    font-weight: 400;
-    margin-bottom: 1em;
   }
 }
