--- a/scss/theme/_main.scss
+++ b/scss/theme/_main.scss
@@ -15,12 +15,15 @@ body {
   color: $white;
   font-family: $font__primary;
   font-size: $font__size;
-  font-weight: 400;
+  font-weight: 300;
+  letter-spacing: 0.8px;
 }
 
 a {
-  color: $light-blue;
+  color: darken($white, 10%);
   text-decoration: none;
+  -webkit-transition: 0.6s ease;
+  transition: 0.6s ease;
 
   &:hover {
     color: $red;
@@ -38,12 +41,21 @@ a {
   left: 0;
   text-align: center;
   width: 100%;
+  font-family: $font__vireo;
   @include font-size(4);
-  text-shadow: 5px 5px 20px rgba($white, 0.4),
-              -5px -5px 20px rgba($white, 0.4);
+  text-shadow: 5px 5px 20px rgba($light-blue, 0.3),
+              -5px -5px 20px rgba($light-blue, 0.3);
 
   span {
     font-weight: 100;
+  }
+
+  a {
+    color: $white;
+
+    &:hover {
+      color: $white;
+    }
   }
 
 }
