--- a/style.css
+++ b/style.css
@@ -23,13 +23,16 @@ html {
 body {
   background: #272F32;
   color: #FAFAFA;
-  font-family: "Avenir", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.2em;
-  font-weight: 400; }
+  font-weight: 300;
+  letter-spacing: 0.8px; }
 
 a {
-  color: #03A9F4;
-  text-decoration: none; }
+  color: #e1e1e1;
+  text-decoration: none;
+  -webkit-transition: 0.6s ease;
+  transition: 0.6s ease; }
   a:hover {
     color: #FC3F37; }
 
@@ -43,11 +46,16 @@ a {
   left: 0;
   text-align: center;
   width: 100%;
+  font-family: "Avenir", sans-serif;
   font-size: 64px;
   font-size: 4rem;
-  text-shadow: 5px 5px 20px rgba(250, 250, 250, 0.4), -5px -5px 20px rgba(250, 250, 250, 0.4); }
+  text-shadow: 5px 5px 20px rgba(3, 169, 244, 0.3), -5px -5px 20px rgba(3, 169, 244, 0.3); }
   .vireo span {
     font-weight: 100; }
+  .vireo a {
+    color: #FAFAFA; }
+    .vireo a:hover {
+      color: #FAFAFA; }
 
 #pixie {
   position: fixed;
@@ -58,18 +66,31 @@ a {
   background: url("./img/backgrounds/one.jpg") no-repeat center center;
   background-size: cover;
   height: 100vh; }
+  .home-content .list-title {
+    font-family: "Inconsolata", sans-serif;
+    font-weight: 400;
+    margin-bottom: 1em;
+    color: #c7c7c7; }
+  .home-content .bookkeeping {
+    border-bottom: 2px solid #673AB7; }
+    .home-content .bookkeeping a:hover {
+      color: #673AB7; }
+  .home-content .project-management {
+    border-bottom: 2px solid #009688; }
+    .home-content .project-management a:hover {
+      color: #009688; }
+  .home-content .social-media {
+    border-bottom: 2px solid #FFEB3B; }
+    .home-content .social-media a:hover {
+      color: #FFEB3B; }
+  .home-content .tools {
+    border-bottom: 2px solid #FF3D2E; }
+    .home-content .tools a:hover {
+      color: #FF3D2E; }
   .home-content ul {
     list-style-type: none;
     z-index: 20;
     position: relative; }
-    .home-content ul:first-child {
-      border-bottom: 2px solid #4CAF50; }
-    .home-content ul:nth-child(2) {
-      border-bottom: 2px solid #FF5722; }
-    .home-content ul:nth-child(3) {
-      border-bottom: 2px solid #FFEB3B; }
-    .home-content ul:nth-child(4) {
-      border-bottom: 2px solid #9C27B0; }
     .home-content ul .fa {
       margin-right: 10px; }
   .home-content li {
@@ -78,8 +99,8 @@ a {
     width: 21.25%;
     padding: 2%;
     float: left;
-    background: rgba(39, 47, 50, 0.9);
-    transition: 0.6s ease; }
+    background: rgba(39, 47, 50, 0.7);
+    transition: 0.4s ease; }
     .home-content .card:nth-child(n) {
       margin-bottom: 5%;
       margin-right: 5%; }
@@ -87,12 +108,7 @@ a {
       margin-right: 0;
       margin-bottom: 0; }
     .home-content .card:hover {
-      background: #272f32;
-      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8), -2px -2px 10px rgba(0, 0, 0, 0.8); }
-  .home-content .list-title {
-    font-family: "Roboto Slab", sans-serif;
-    font-weight: 400;
-    margin-bottom: 1em; }
+      background: #272f32; }
 
 header {
   height: 65px;
