--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -18,5 +18,5 @@
 
 $font__primary: 'Roboto', sans-serif;
 $font__vireo: 'Avenir', sans-serif;
-$font__secondary: 'Inconsolata', sans-serif;
+$font__secondary: 'Roboto', sans-serif;
 $font__size: 1.2em;
