--- a/scss/theme/_main.scss
+++ b/scss/theme/_main.scss
@@ -15,8 +15,8 @@ body {
   color: $white;
   font-family: $font__primary;
   font-size: $font__size;
-  font-weight: 300;
-  letter-spacing: 0.8px;
+  font-weight: 400;
+  letter-spacing: 1px;
 }
 
 a {
@@ -35,6 +35,7 @@ a {
   margin: 0 auto;
 }
 
+// Site logo
 .vireo {
   position: absolute;
   bottom: 25px;
@@ -43,8 +44,12 @@ a {
   width: 100%;
   font-family: $font__vireo;
   @include font-size(4);
-  text-shadow: 5px 5px 20px rgba($light-blue, 0.3),
-              -5px -5px 20px rgba($light-blue, 0.3);
+  text-shadow: 5px 5px 20px rgba($black, 0.6),
+              -5px -5px 20px rgba($black, 0.6);
+
+  @include bp-small() {
+    display: none;
+  }
 
   span {
     font-weight: 100;
@@ -58,12 +63,4 @@ a {
     }
   }
 
-}
-
-
-
-#pixie {
-    position:fixed;
-    width:100%;
-    height:100%;
 }
